[package]
name = "jsoup-fuzz"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jsoup = { path = ".." }
pretty_assertions = "1.4.1"



[lib]
name = "common"
path = "fuzz_targets/common.rs"

[[bin]]
name = "json-input"
path = "fuzz_targets/json-input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replace"
path = "fuzz_targets/replace.rs"
test = false
doc = false
bench = false

[[bin]]
name = "insert"
path = "fuzz_targets/insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "remove"
path = "fuzz_targets/remove.rs"
test = false
doc = false
bench = false
